# pkg/guacrest/openapi.yaml
@@ -67,7 +67,7 @@ paths:
               - scorecard
       responses:
         "200":
-          $ref: "#/components/responses/PurlList"
+          $ref: "#/components/responses/PackageNameList"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
@@ -87,6 +87,13 @@ components:
       properties:
         message:
           type: string
+    PackageName:
+      type: object
+      properties:
+        Name:
+          type: string
+        DependentCount:
+          type: integer
   responses:
     # intended for code 200
     PurlList:
@@ -97,6 +104,14 @@ components:
             type: array
             items:
               $ref: "#/components/schemas/Purl"
+    PackageNameList:
+      description: A list of package names with their dependent counts
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/PackageName"
     # intended for code 400, client side error
     BadRequest:
       description: Bad request, such as from invalid or missing parameters
